--- a/budget_back/src/main/resources/application.properties
+++ b/budget_back/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+server.port=8080
 
+#spring.r2dbc.url=r2dbc:mariadb://localhost:3306/presupuestoFamiliar
+#spring.r2dbc.username=root
+#spring.r2dbc.password=root
+#
+#spring.r2dbc.pool.enabled=true
+#spring.r2dbc.pool.max-size=10
+#spring.r2dbc.pool.max-acquire-time=10s
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/presupuestoFamiliar
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.initialize=true
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+multipart.maxFileSize=100MB
+multipart.maxRequestSize=100MB
