--- a/budget_back/src/main/resources/application.properties
+++ b/budget_back/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.initialize=true
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -30,6 +30,8 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.jpa.defer-datasource-initialization=true
 
 multipart.maxFileSize=100MB
 multipart.maxRequestSize=100MB
